--- a/sms-spam-detection.ipynb
+++ b/sms-spam-detection.ipynb
@@ -13,17 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "d660cd48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('spam.csv')"
+    "file_encoding='utf8'\n",
+    "df = pd.read_csv('C:/Users/shres/OneDrive/Desktop/spam.csv',encoding='latin1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "c8e3e9cf",
    "metadata": {},
    "outputs": [
@@ -57,41 +58,41 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2464</th>\n",
+       "      <th>2891</th>\n",
        "      <td>ham</td>\n",
-       "      <td>They will pick up and drop in car.so no problem..</td>\n",
+       "      <td>Babe? You said 2 hours and it's been almost 4 ...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1248</th>\n",
+       "      <th>1729</th>\n",
        "      <td>ham</td>\n",
-       "      <td>HI HUN! IM NOT COMIN 2NITE-TELL EVERY1 IM SORR...</td>\n",
+       "      <td>Lol yeah at this point I guess not</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1413</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>Dear U've been invited to XCHAT. This is our f...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2995</th>\n",
+       "      <th>966</th>\n",
        "      <td>ham</td>\n",
-       "      <td>They released vday shirts and when u put it on...</td>\n",
+       "      <td>I am not sure about night menu. . . I know onl...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4458</th>\n",
-       "      <td>spam</td>\n",
-       "      <td>Welcome to UK-mobile-date this msg is FREE giv...</td>\n",
+       "      <th>2525</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Say this slowly.? GOD,I LOVE YOU &amp;amp; I NEED ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1688</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nan sonathaya soladha. Why boss?</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -101,22 +102,22 @@
        "</div>"
       ],
       "text/plain": [
-       "        v1                                                 v2 Unnamed: 2  \\\n",
-       "2464   ham  They will pick up and drop in car.so no problem..        NaN   \n",
-       "1248   ham  HI HUN! IM NOT COMIN 2NITE-TELL EVERY1 IM SORR...        NaN   \n",
-       "1413  spam  Dear U've been invited to XCHAT. This is our f...        NaN   \n",
-       "2995   ham  They released vday shirts and when u put it on...        NaN   \n",
-       "4458  spam  Welcome to UK-mobile-date this msg is FREE giv...        NaN   \n",
+       "       v1                                                 v2 Unnamed: 2  \\\n",
+       "2891  ham  Babe? You said 2 hours and it's been almost 4 ...        NaN   \n",
+       "1729  ham                 Lol yeah at this point I guess not        NaN   \n",
+       "966   ham  I am not sure about night menu. . . I know onl...        NaN   \n",
+       "2525  ham  Say this slowly.? GOD,I LOVE YOU &amp; I NEED ...        NaN   \n",
+       "1688  ham                   Nan sonathaya soladha. Why boss?        NaN   \n",
        "\n",
        "     Unnamed: 3 Unnamed: 4  \n",
-       "2464        NaN        NaN  \n",
-       "1248        NaN        NaN  \n",
-       "1413        NaN        NaN  \n",
-       "2995        NaN        NaN  \n",
-       "4458        NaN        NaN  "
+       "2891        NaN        NaN  \n",
+       "1729        NaN        NaN  \n",
+       "966         NaN        NaN  \n",
+       "2525        NaN        NaN  \n",
+       "1688        NaN        NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "b4c93050",
    "metadata": {},
    "outputs": [
@@ -137,13 +138,167 @@
        "(5572, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "05a7aaec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>v1</th>\n",
+       "      <th>v2</th>\n",
+       "      <th>Unnamed: 2</th>\n",
+       "      <th>Unnamed: 3</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>FreeMsg Hey there darling it's been 3 week's n...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Even my brother is not like to speak with me. ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>As per your request 'Melle Melle (Oru Minnamin...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>WINNER!! As a valued network customer you have...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Had your mobile 11 months or more? U R entitle...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     v1                                                 v2 Unnamed: 2  \\\n",
+       "0   ham  Go until jurong point, crazy.. Available only ...        NaN   \n",
+       "1   ham                      Ok lar... Joking wif u oni...        NaN   \n",
+       "2  spam  Free entry in 2 a wkly comp to win FA Cup fina...        NaN   \n",
+       "3   ham  U dun say so early hor... U c already then say...        NaN   \n",
+       "4   ham  Nah I don't think he goes to usf, he lives aro...        NaN   \n",
+       "5  spam  FreeMsg Hey there darling it's been 3 week's n...        NaN   \n",
+       "6   ham  Even my brother is not like to speak with me. ...        NaN   \n",
+       "7   ham  As per your request 'Melle Melle (Oru Minnamin...        NaN   \n",
+       "8  spam  WINNER!! As a valued network customer you have...        NaN   \n",
+       "9  spam  Had your mobile 11 months or more? U R entitle...        NaN   \n",
+       "\n",
+       "  Unnamed: 3 Unnamed: 4  \n",
+       "0        NaN        NaN  \n",
+       "1        NaN        NaN  \n",
+       "2        NaN        NaN  \n",
+       "3        NaN        NaN  \n",
+       "4        NaN        NaN  \n",
+       "5        NaN        NaN  \n",
+       "6        NaN        NaN  \n",
+       "7        NaN        NaN  \n",
+       "8        NaN        NaN  \n",
+       "9        NaN        NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(10)"
    ]
   },
   {
@@ -3445,7 +3600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3459,7 +3614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
